chore: Remove unused code and update styles

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<div class="container bg-tertiary">
+  <footer
+    class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+  >
+    <div class="col-md-4 d-flex align-items-center">
+      <img
+        src="https://play-lh.googleusercontent.com/H8K4HRMizPIM6f21x6dGGzmSu30GAr65bujkd7c6IEt0qb4LvljKUdkg0huPQNn4xX4=w240-h480-rw"
+        alt="JustDoIt Logo"
+        class="d-inline-block align-text-top me-2"
+      />
+
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2024 LeTex, Inc</span>
+    </div>
+  </footer>
+</div>
