chore: Update completed and home components
The completed component's HTML and TypeScript files have been updated to display a list of completed items using the `listCompleted` property. The home component's HTML and TypeScript files have been updated to include a search functionality for filtering posts based on the author's name.

Note: This commit does not include any functional changes to the codebase, but rather focuses on updating the components' functionality and layout.

--- a/src/app/pages/completed/completed.component.html
+++ b/src/app/pages/completed/completed.component.html
@@ -1,1 +1,7 @@
-<p>completed works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 d-inline-block m-1" *ngFor="let post of listCompleted">
+      <app-card [ListWithUser]="post"></app-card>
+    </div>
+  </div>
+</div>
