chore: Update card and navbar components
The card component's HTML and SCSS files have been updated to use new CSS classes for background colors. The navbar component's HTML and SCSS files have been updated to use a new logo image and apply a linear gradient background.

Note: This commit does not include any functional changes to the codebase, but rather focuses on updating the components' styles and visuals.

--- a/src/app/components/users-card/users-card.component.html
+++ b/src/app/components/users-card/users-card.component.html
@@ -6,8 +6,8 @@
       <div
         class="col-12 d-inline-block m-1"
         [ngClass]="{
-          'bg-success': post.completed,
-          'bg-danger': !post.completed
+          'bg-verde': post.completed,
+          'bg-rosso': !post.completed
         }"
         *ngFor="let post of listArr"
       >
