--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="row">
+    <div class="col d-flex justify-content-center mt-1">
+      <iframe
+        src="https://www.youtube.com/embed/ZXsQAXx_ao0"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+
     <div class="col-12 text-center"><h1>Just Do It.</h1></div>
     <div class="col">
       <div class="row">
@@ -14,9 +23,9 @@
               (input)="filterPosts($event)"
             />
             <button
-              class="btn btn-outline-secondary"
+              class="btn btn-outline-secondary greenButton fw-bold text-dark"
               type="button"
-              id="button-addon2"
+              id="button-addon2 "
             >
               Search
             </button>
