--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,8 +2,8 @@
   class="card mb-3"
   *ngIf="ListWithUser"
   [ngClass]="{
-    'bg-success': ListWithUser.completed,
-    'bg-danger': !ListWithUser.completed
+    'bg-verde': ListWithUser.completed,
+    'bg-rosso': !ListWithUser.completed
   }"
 >
   <div class="card-body d-flex align-items-center p-1 ms-1">
