--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg border-bottom border-1 border-success mb-1">
   <div class="container-fluid">
     <img
-      src="https://www.dictionary.com/e/wp-content/uploads/2018/03/Just-Do-It.jpg"
+      src="../../../assets/image/image1.png"
       alt="Logo"
       class="d-inline-block align-text-top"
     />
