chore: Update background colors and fonts in components

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -15,7 +15,7 @@
     />
     <img [src]="ListWithUser.image" alt="Img profile" class="rounded-circle" />
     <div class="flex-grow-1 ms-2">
-      <h5 class="card-title">{{ ListWithUser.title }}</h5>
+      <h5 class="card-title fw-bold">{{ ListWithUser.title }}</h5>
       <p class="card-text fw-bold text-uppercase">{{ ListWithUser.todo }}</p>
       <p class="card-text">Email: {{ ListWithUser.email }}</p>
       <p class="card-text">
