--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Reddit+Mono:wght@200..900&display=swap");
 img {
   width: 50px;
 }
@@ -9,5 +10,9 @@ p {
   background-color: #7ee999;
 }
 .bg-rosso {
-  background-color: #d16363;
+  background-color: #d86969;
+}
+
+.card {
+  font-family: "Cinzel", serif;
 }
