--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg border-bottom border-1 border-success mb-1">
+<nav class="navbar navbar-expand-lg border-bottom border-1 border-success">
   <div class="container-fluid">
     <img
       src="../../../assets/image/image1.png"
@@ -19,13 +19,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/"
+            ><i class="bi bi-house-door-fill"></i> Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="completed">Completed</a>
+          <a class="nav-link" routerLink="completed"
+            ><i class="bi bi-patch-check-fill"></i> Completed</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="users">Users</a>
+          <a class="nav-link" routerLink="users"
+            ><i class="bi bi-people-fill"></i> Users</a
+          >
         </li>
       </ul>
     </div>
