--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,8 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 img {
   width: 50px;
 }
 
 nav {
-  background: linear-gradient(to top, #7ee999, #3a7d58);
+  background: linear-gradient(to top, #e23939, #d47b36);
 }
