--- a/src/app/components/users-card/users-card.component.html
+++ b/src/app/components/users-card/users-card.component.html
@@ -1,6 +1,10 @@
-<div class="card mb-3" *ngIf="CardUsers">
+<div class="card mb-3 cardBody" *ngIf="CardUsers">
   <div class="card-body d-flex align-items-center p-1 ms-1">
-    <img [src]="CardUsers.image" alt="Img profile" class="rounded-circle" />
+    <img
+      [src]="CardUsers.image"
+      alt="Img profile"
+      class="rounded-circle img-fluid"
+    />
     <div class="flex-grow-1 ms-2">
       <h5 class="card-title">{{ CardUsers.title }}</h5>
       <div
@@ -11,7 +15,7 @@
         }"
         *ngFor="let post of listArr"
       >
-        <input type="checkbox" [(ngModel)]="post.completed" class="me-3" />
+        <input type="checkbox" [(ngModel)]="post.completed" class="me-2 ms-2" />
         {{ post.todo }}
       </div>
       <p class="card-text">
