--- a/src/app/pages/completed/completed.component.html
+++ b/src/app/pages/completed/completed.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid colorbg">
   <div class="row">
     <div class="col-12 d-inline-block m-1" *ngFor="let post of listCompleted">
       <app-card [ListWithUser]="post"></app-card>
