--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row align-items-center colorbg pt-3">
-    <div class="col-auto d-none d-md-block">
+    <div class="col-auto d-none d-lg-block">
       <img src="../../../assets/image/image2.png" alt="Just Do It logo" />
     </div>
     <div class="col d-flex justify-content-center mt-1">
@@ -11,7 +11,7 @@
         allowfullscreen
       ></iframe>
     </div>
-    <div class="col-auto d-none d-md-block">
+    <div class="col-auto d-none d-lg-block">
       <img src="../../../assets/image/image3.png" alt="Just Do It logo" />
     </div>
 
